src/objects/Xero_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Xero Invoices</relationshipLabel>
        <relationshipName>Xero_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmountCredited__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>AmountCredited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountDue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>AmountDue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountPaid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>AmountPaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BrandingThemeID__c</fullName>
        <label>BrandingThemeID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyCode__c</fullName>
        <label>CurrencyCode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>DueDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvoiceID__c</fullName>
        <externalId>true</externalId>
        <label>InvoiceID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <externalId>true</externalId>
        <label>InvoiceNumber</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineAmountTypes__c</fullName>
        <label>LineAmountTypes</label>
        <picklist>
            <picklistValues>
                <fullName>Inclusive</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>DRAFT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PAID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTHORISED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBMITTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOIDED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELETED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEMPLATE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTax__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>TotalTax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACCREC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ACCPAY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpdatedDateUTC__c</fullName>
        <label>UpdatedDateUTC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Xero_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Xero Contact</label>
        <referenceTo>Xero_Contact__c</referenceTo>
        <relationshipLabel>Xero Invoices</relationshipLabel>
        <relationshipName>Xero_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Xero Invoice</label>
    <nameField>
        <label>Xero Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xero Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>